Update Vehicles “2011-volvo-s60”

--- a/src/posts/2011-volvo-s60.md
+++ b/src/posts/2011-volvo-s60.md
@@ -1,6 +1,6 @@
 ---
 title: 2011 Volvo S60
-price: 5399
+price: 6999
 miles: 135000
 date: 2024-12-31T22:50:32.286Z
 description: |-
@@ -15,5 +15,5 @@ description: |-
   Black Exterior
 
   Leather Seats
-image: /static/img/uploads/vehicle-coming-soon-1-2-.jpg
+image: /static/img/uploads/img_6067.jpeg
 ---
